Fix magnify image z-index.

--- a/_sass/components/page.scss
+++ b/_sass/components/page.scss
@@ -7,7 +7,7 @@
 }
 
 $header-width: 20rem;
-$small-header-width: calc(100% - 4rem);
+$small-header-width: calc(100% - 5.5rem);
 
 //
 // Header
@@ -208,7 +208,7 @@ main {
     left: 1rem;
 
     &.active {
-      left: $small-header-width;
+      left: 1.5rem + $small-header-width;
     }
   }
 }
